--- a/app/views/layouts/_google_analytics.html.slim
+++ b/app/views/layouts/_google_analytics.html.slim
@@ -1,6 +1,6 @@
 javascript:
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'CHANGE ME MF']);
+  _gaq.push(['_setAccount', 'UA-27403341-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
