Uncomment ga js in layout

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,5 +16,5 @@ html
   #content
     == yield
 
-  /*=render partial: 'layouts/google_analytics' if Rails.env.production?*/
+  =render partial: 'layouts/google_analytics' if Rails.env.production?
   /*=render partial: 'layouts/gosquared' if Rails.env.production?*/
