--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -1,20 +1,12 @@
-@import base
 @import compass
 @import blueprint
-@import blueprint/scaffolding
-@import compass/css3
-@import "compass/css3/opacity"
-@import "compass/typography/lists/bullets"
-@import "compass/css3/text-shadow"
-@import "compass/css3/transition"
-
 
 +global-reset
 
 body
   +blueprint-typography(true)
   +blueprint-utilities
-  +blueprint-debug
+  // +blueprint-debug
   +blueprint-interaction
   // Remove the scaffolding when you're ready to start doing visual design.
   // Or leave it in if you're happy with how blueprint looks out-of-the-box
